[gd_scene load_steps=16 format=3 uid="uid://b26mdt5aks4n6"]

[ext_resource type="AudioStream" uid="uid://blb1uw0v0m780" path="res://assets/Sound/bg-music.mp3" id="1_d8um4"]
[ext_resource type="Script" path="res://scripts/audio_manager.gd" id="1_diyln"]
[ext_resource type="AudioStream" uid="uid://dpv4v467y42rf" path="res://assets/Sound/step.mp3" id="3_0o1lk"]
[ext_resource type="AudioStream" uid="uid://c2uu4nlvpuf73" path="res://assets/Sound/eating1.mp3" id="4_ubmyj"]
[ext_resource type="AudioStream" uid="uid://jflbfrsdnc0c" path="res://assets/Sound/pig1.mp3" id="5_vxpd7"]
[ext_resource type="AudioStream" uid="uid://c4f50ho4cr38y" path="res://assets/Sound/pig2.mp3" id="6_hpo8k"]
[ext_resource type="AudioStream" uid="uid://dcvmc1w75grin" path="res://assets/Sound/pig-die.mp3" id="7_db5wc"]
[ext_resource type="AudioStream" uid="uid://cwspjtgv3p2dx" path="res://assets/Sound/water.mp3" id="8_bw0f8"]
[ext_resource type="AudioStream" uid="uid://cj404yswl1ddb" path="res://assets/Sound/gameover.mp3" id="9_c3rq6"]
[ext_resource type="AudioStream" uid="uid://nhutgjlwh0lm" path="res://assets/Sound/win.mp3" id="10_ve2j8"]
[ext_resource type="AudioStream" uid="uid://db8i3bbl2rs8" path="res://assets/Sound/player-die.mp3" id="11_1l214"]
[ext_resource type="AudioStream" uid="uid://usnc08owmgbo" path="res://assets/Sound/monsterkill.wav" id="12_8bdl1"]
[ext_resource type="AudioStream" uid="uid://buwqu1eh47vp0" path="res://assets/Sound/doublekill.wav" id="14_a1sxs"]
[ext_resource type="AudioStream" uid="uid://bh4j5xm7nl5r1" path="res://assets/Sound/multikill.wav" id="16_oq4jh"]
[ext_resource type="AudioStream" uid="uid://ftlgoycdjckw" path="res://assets/Sound/ultrakill.wav" id="18_j3a3j"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_diyln")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_d8um4")
autoplay = true
bus = &"Music"

[node name="Footstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0o1lk")
autoplay = true
bus = &"SFX"

[node name="Eating" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ubmyj")
max_polyphony = 2
bus = &"SFX"

[node name="Pig1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vxpd7")
bus = &"SFX"

[node name="Pig2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hpo8k")
bus = &"SFX"

[node name="PigDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_db5wc")
max_polyphony = 3
bus = &"SFX"

[node name="Water" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bw0f8")
bus = &"SFX"

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_c3rq6")
bus = &"SFX"

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ve2j8")
bus = &"SFX"

[node name="PlayerDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_1l214")
bus = &"SFX"

[node name="MonsterKill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_8bdl1")
bus = &"Announcer"

[node name="DoubleKill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_a1sxs")
bus = &"Announcer"

[node name="MultiKill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_oq4jh")
bus = &"Announcer"

[node name="UltraKill" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_j3a3j")
bus = &"Announcer"
